# sqil-experiments

./: .gitignore  .pre-commit-config.yaml  README.md  config.yaml  pyproject.toml
examples/: TD_setup_left_line_with_HDAWG.py  qpu_notebook.ipynb  test_setup_emulation.py
get_started/: config.yaml  measure.ipynb
get_started/analysis/: quick_plot.ipynb
get_started/setup/: cw.py  setup_emulation.py  setup_stormcrow.py  setup_transmon.py
measurements/: 20250108_automatic_indexCWonetone.py  20250218_automatic_repeat_T1.py  20250221_automatic_repeat_T2echo_cpmg.py  20250224_automatic_T1_T2echo.py  250108_CW_onetone_run_no_flux_index.py  CW_onetone_run.py  CW_pulsed_twotone_HDAWG_run.py  CW_twotone_run.py  CW_twotone_run_no_flux_SGS.py  CW_twotone_run_no_flux_SignalCore.py  CW_twotone_run_no_flux_SignalCore20GHz.py  CW_twotone_run_no_flux_sweep_ro_freq_SGS.py  CW_twotone_run_no_flux_sweep_ro_freq_SignalCore40GHz.py  CW_twotone_run_no_flux_sweep_ro_power_ro_freq.py  CW_twotone_run_no_flux_with_SGS.py  CW_twotone_sweep_ro_freq_run.py  CWonetone_vs_power_qcodes.py  SGS100ARFsource_control.ipynb  SignalCore40GHz_control.ipynb  SingalCore20GHz_control.ipynb  T1_SGS_exp.py  T1_SGS_run.py  T1_exp.py  T1_exp_smallpower_20240423.py  T1_index_exp.py  T1_index_run.py  T1_run.py  T1_run_withVNALO.py  Yokogawa_control.ipynb  amp_rabi.py  amp_rabi_SGS_exp.py  amp_rabi_SGS_run.py  amp_rabi_exp.py  amp_rabi_run - Copy.py  amp_rabi_run.py  amp_rabi_run_index.py  config.yaml  dispersive_shift_ef_exp.py  dispersive_shift_ef_pwm_exp.py  dispersive_shift_ef_pwm_run.py  (+86 more)
(+112 files in other folders)
