[project]
name = "sqil-experiments"
version = "0.0.1"
description = ""
authors = [
    {name = "Andrea Duina"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "numpy (>=2.2.3,<3.0.0)",
    "scipy (>=1.15.1,<2.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "lmfit (>=1.3.2,<2.0.0)",
    "black (==24.10.0)",
    "isort (==5.9.3)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"

[tool.black]
line-length = 88
target-version = ["py310"]
exclude = '''
/(
    \.git
    | \.venv
)/
'''

[tool.isort]
profile = "black"
