[tool.poetry]
name = "sqil-experiments"
version = "0.0.1"
description = ""
authors = ["Andrea Duina"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
numpy = ">=2.2.3,<3.0.0"
scipy = ">=1.15.1,<2.0.0"
matplotlib = ">=3.10.0,<4.0.0"
lmfit = ">=1.3.2,<2.0.0"
black = "==24.10.0"
isort = "==5.9.3"
plottr = ">=0.14.0,<0.15.0"
tqdm = "^4.67.1"
laboneq = "^25.10.0"
laboneq-applications = "^25.10.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"
ipykernel = "^6.29.5"
black = "24.10.0"
isort = "5.9.3"

[tool.black]
line-length = 88
target-version = ["py310"]
exclude = '''
/(
    \.git
    | \.venv
)/
'''

[tool.isort]
profile = "black"
